--- a/PITCHME.css
+++ b/PITCHME.css
@@ -1,3 +1,9 @@
-.reveal h1, .reveal h2 {
+.reveal h1,
+.reveal h2,
+section.has-dark-background h2 {
   color: rgb(0, 119, 255);
+}
+body {
+  background: #e12a2a;
+  background-color: #fff;
 }
