--- a/PITCHME.css
+++ b/PITCHME.css
@@ -7,3 +7,7 @@ body {
   background: #e12a2a;
   background-color: #fff;
 }
+  
+.reveal .slide-background-content {
+  background-color: cornsilk;
+}
