--- a/PITCHME.css
+++ b/PITCHME.css
@@ -22,7 +22,10 @@ section.has-dark-background {
 .reveal{
   color: #ffffff;
 }
-.reveal h1 .reveal h2{
+.reveal h1 {
+  color: #f26225;
+}
+.reveal h2 {
   color: #f26225;
 }
 
