--- a/PITCHME.css
+++ b/PITCHME.css
@@ -27,7 +27,7 @@ section.has-dark-background {
   color: #ffffff;
 }
 
-.reveal pre code,
+/*.reveal pre code,
 .reveal pre code {
 background-color:rgba(255, 255, 255, 0.76);
-}
+}*/
