--- a/PITCHME.css
+++ b/PITCHME.css
@@ -5,6 +5,10 @@ section.has-dark-background h2 {
   text-shadow: 2px 2px 5px red;
 }
 
+.reveal h5 {
+  color: red;
+}
+
 .reveal .slide-background-content {
   background-color: rgb(7, 7, 7);
 }
