--- a/PITCHME.css
+++ b/PITCHME.css
@@ -5,7 +5,7 @@ section.has-dark-background h2 {
   text-shadow: 2px 2px 5px red;
 }
 
-.reveal h5 {
+section.has-dark-background h5 {
   color: red;
 }
 
