--- a/PITCHME.css
+++ b/PITCHME.css
@@ -11,7 +11,7 @@ section.has-dark-background h5 {
 
 .reveal h5 {
   color: darkgray;
-  font-size: small;
+  font-size: 80%;
 }
 
 .reveal .slide-background-content {
